--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,19 +19,10 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#portfolio">Work</a>
                     </li>
-                    <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#about">About</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#team">Team</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                     <li>
+                       <a class="page-scroll" class="portfolio-link" data-toggle="modal" href="#about-modal">About</a>
                     </li>
                 </ul>
             </div>
@@ -42,14 +33,13 @@
 
     <!-- Header -->
     <header>
-        <div class="container">
-            <div class="intro-text">
-                <div class="intro-lead-in">Welcome To Our Studio!</div>
-                <div class="intro-heading">It's Nice To Meet You</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
-            </div>
-        </div>
+
+    <div class="holder">
+         <iframe class="frame" allowtransparency="true" frameborder="0" style="width:100vw;height:100vh;position: relative;z-index=-1" src="{{ site.baseurl }}/img/sketch_eyes.html"></iframe>
     </header>
+     <div class="email">
+    </div>
+
 <!--
         {% for page in site.pages %}
           {% if page.title %}<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>{% endif %}
