--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,15 +7,12 @@
     <body id="page-top" class="index">
 
     {% include header.html %}
-    {% include services.html %}
     {% include portfolio_grid.html %}
-    {% include about.html %}
-    {% include team.html %}
-    {% include clients.html %}
-    {% include contact.html %}
     {% include footer.html %}
+    {% include about_modal.html %}
     {% include modals.html %}
     {% include js.html %}
+
 
     </body>
 </html>
