--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -387,8 +387,8 @@ section h3.section-subheading {
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
     transition: all ease .5s;
-    background: rgba({{ site.data.template.color.primary | hex_to_rgb | join: ',' }}, .9);/* Fallback when no plugin support */
-    background: rgba({{ site.data.template.color.primary | hex_to_rgb | join: ',' }}, .9);
+    background: rgba(15,15,15, .9);/* Fallback when no plugin support */
+    background: rgba(15,15,15, .9);
 }
 
 #portfolio .portfolio-item .portfolio-link .portfolio-hover:hover {
