--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,7 +35,7 @@
     <header>
 
     <div class="holder">
-         <iframe class="frame" allowtransparency="true" frameborder="0" style="width:100vw;height:100vh;position: relative; z-index=-1; pointer-events: auto;" src="{{ site.baseurl }}/img/sketch_eyes.html"></iframe>
+         <iframe class="frame" allowtransparency="true" frameborder="0" style="width:100vw;height:100vh;position: relative; pointer-events: auto;" src="{{ site.baseurl }}/img/sketch_eyes.html"></iframe>
     </header>
      <div class="email">
     </div>
