--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -177,7 +177,7 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default .navbar-brand {
     letter-spacing: 1px;
-    font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,cursive;
+    font-family: 'Montserrat, "Helvetica Neue",Helvetica,Arial,sans-serif'
     color: #FFF;
 }
 
@@ -327,19 +327,28 @@ header .intro-text .intro-heading {
 
 }
 
+
+
 .email{
-    z-index: 1045;
-    width: 230px;
-    min-height: 53px;
+    z-index: 99;
+    width: 20rem;
+    max-width: 550px;
+    min-height: 103px;
+    padding: 15px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     background-color: transparent;
     font-size: 19px;
-    color: #{{ site.data.template.color.primary }};;
-    text-align: right;
-    position: fixed;
-    bottom: 0px;
-    left: 75%;
-    margin-left: -80px;
+    color: #{{ site.data.template.color.primary }};
+    text-align:center;
+    border-radius: 4px;
+    position: absolute;
+    bottom: 40%;
+    left: 40%;
+    
 }
+
 
 section {
     padding: 100px 0;
