--- a/_includes/about_modal.html
+++ b/_includes/about_modal.html
@@ -14,8 +14,8 @@
                             <h2>About</h2>
                             <hr class="star-primary">
                             <br><b>HELLO</b></br>
-<br>I am a designer, illustrator, creative person who likes to make things, <br>especially when it involves making things with other people.</br>
-<br>Get in touch with me: jordanwhitneymartin@gmail.com</br>
+<br>Jordan is a designer, artist, creative person who likes to make things, <br>especially when it involves making things with other people.</br>
+<br>Get in touch: jordanwhitneymartin@gmail.com</br>
 
 <br><b>EDUCATION</b></br>
 <br>Visual Communication Design // The School of the Art Institute of Chicago
@@ -30,7 +30,7 @@
 <br>The Design Show 2015 // The Chicago Art Department
 <br>Data as Art 2015 // Ford Engineering Design Center
 <br>"Why Art Belongs in Science Museums" // NAEA Post-Op 2016 Symposium presentation</br>
-<p><i><p style="color:#95a5a6;">Homepage adapted from movement interaction installation at the Chicago Art Department</i></p><p></p>
+<p><i><p style="color:#95a5a6;">Homepage adapted from movement interactiove installation at the Chicago Art Department</i></p><p></p>
 
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
