--- a/_includes/about_modal.html
+++ b/_includes/about_modal.html
@@ -14,8 +14,8 @@
                             <h2>About</h2>
                             <hr class="star-primary">
                             <br><b>HELLO</b></br>
-<br>I am a designer, illustrator, creative person who likes to make things, <br>especially when it involves making things with other people.</br>
-<br>Get in touch with me: jordanwhitneymartin@gmail.com</br>
+<br>Jordan is a designer, artist, creative person who likes to make things, <br>especially when it involves making things with other people.</br>
+<br>Get in touch: jordanwhitneymartin@gmail.com</br>
 
 <br><b>EDUCATION</b></br>
 <br>Visual Communication Design // The School of the Art Institute of Chicago
