editing sketch mobile

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,13 +31,11 @@
         <!-- /.container-fluid -->
     </nav>
 
+
     <!-- Header -->
     <header>
-
-    <div class="holder">
-         <iframe class="frame" allowtransparency="true" frameborder="0" style="width:100vw;height:100vh;position: relative;z-index=-1 pointer-events: auto;" src="{{ site.baseurl }}/img/sketch_eyes.html"></iframe>
     </header>
-     <div class="email">
+       <div id="bg"></div>
     </div>
 
 <!--
