--- a/_includes/js.html
+++ b/_includes/js.html
@@ -26,3 +26,6 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="{{ "/js/agency.js" | prepend: site.baseurl }}"></script>
+     <script src="{{ "/js/sketch.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/p5.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/p5.dom.js" | prepend: site.baseurl }}"></script>
