--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -327,6 +327,17 @@ header .intro-text .intro-heading {
 
 }
 
+    #bg {
+        position: relative;
+        width: 100vw;
+        height: 100vh;
+        top: 0;
+        right: 0;
+        left: 0;
+        z-index: -1;
+    }
+
+
 .email{
     z-index: 1045;
     width: 230px;
