editing sketch mobile

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,11 +33,8 @@
 
     <!-- Header -->
     <header>
-
-    <div class="holder">
-         <iframe class="frame" allowtransparency="true" frameborder="0" style="width:100vw;height:100vh;position: relative; pointer-events: auto;" src="{{ site.baseurl }}/img/sketch_eyes.html"></iframe>
-              <div class="email row">
-    </div>
+        <div id="bg">
+        </div>
     </header>
 
 
