--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,8 +32,11 @@
     </nav>
 
     <!-- Header -->
-     <header id="bg">
+     <header>
+     <div class="loader"></div>
+     <div id="bg"></div>
     </header>
+    
 
 
 
