--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -274,6 +274,16 @@ header {
     -o-background-size: cover;
 }
 
+.loader {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url('img/ball.gif') 50% 50% no-repeat rgb(249,249,249);
+}
+
 header .intro-text {
     padding-top: 90px;
     padding-bottom: 50px;
