--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -281,7 +281,7 @@ header {
     width: 100%;
     height: 100%;
     z-index: 9999;
-    background: url('img/ball.gif') 50% 50% no-repeat rgb(249,249,249);
+    background: url('img/eyeloader.gif') 50% 50% no-repeat rgb(249,249,249);
 }
 
 header .intro-text {
