--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,3 +1,10 @@
+      <!-- Loader -->
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script type="text/javascript">
+$(window).ready(function() {
+    $(".loader").fadeOut("slow");
+})
+</script>
   <!-- Google analytics -->
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
