--- a/_includes/about_modal.html
+++ b/_includes/about_modal.html
@@ -30,6 +30,9 @@
 <br>The Design Show 2015 // The Chicago Art Department
 <br>Data as Art 2015 // Ford Engineering Design Center
 <br>"Why Art Belongs in Science Museums" // NAEA Post-Op 2016 Symposium presentation</br>
+
+<br><b>SPEAKING</b></br>
+<br>"Why Art Belongs in Science Museums" // NAEA Post-Op 2016 Symposium presentation</br>
 <p><i><p style="color:#95a5a6;">Homepage adapted from movement interactive installation at the Chicago Art Department</i></p><p></p>
 
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
