--- a/_includes/about_modal.html
+++ b/_includes/about_modal.html
@@ -28,7 +28,7 @@
 
 <br><b>EXHIBITIONS</b></br>
 <br>The Design Show 2015 // The Chicago Art Department
-<br>Data as Art 2015 // Ford Engineering Design Center
+<br>Data as Art 2015 // Ford Engineering Design Center</br>
 
 <br><b>SPEAKING</b></br>
 <br>"Why Art Belongs in Science Museums" // NAEA Post-Op 2016 Symposium presentation</br>
