--- a/_includes/about_modal.html
+++ b/_includes/about_modal.html
@@ -14,7 +14,7 @@
                             <h2>About</h2>
                             <hr class="star-primary">
                             <br><b>HELLO</b></br>
-<br>Jordan is a Chicago based designer, artist, creative person who likes to make things, <br>especially when it involves making things with other people.</br>
+<br>Jordan is a Chicago based designer, artist, and creative who likes to make things, <br>especially when it involves making things with other people.</br>
 <br>Get in touch: jordanwhitneymartin@gmail.com</br>
 
 <br><b>EDUCATION</b></br>
