--- a/_includes/about_modal.html
+++ b/_includes/about_modal.html
@@ -1,5 +1,5 @@
  <!-- About Modal -->
-    <div class="portfolio-modal modal fade" id="about-modal" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="portfolio-modal modal fade" id="about-modal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content style="z-index: 1051;"">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -13,26 +13,26 @@
                         <div class="modal-body">
                             <h2>About</h2>
                             <hr class="star-primary">
-                            <br><b>HELLO</b></br>
-<br>Jordan is a Chicago based designer, artist, and creative who likes to make things, <br>especially when it involves making things with other people.</br>
-<br>Get in touch: jordanwhitneymartin@gmail.com</br>
+                            <h4>HELLO</h4>
+<p>Jordan is a Chicago based designer, artist, and creative with an interest in science and complex systems. She'll likely do something like explain things like the Laser Interferometer Gravitational-Wave Observatory on a cocktail napkin to you.</br>
+<br>Get in touch: jordanwhitneymartin@gmail.com</p>
 
-<br><b>EDUCATION</b></br>
-<br>Visual Communication Design // The School of the Art Institute of Chicago
-<br>History and Philosophy // The Ohio State University</br>
+<h4>EDUCATION</h4>
+<p>Visual Communication Design // The School of the Art Institute of Chicago
+<br>History and Philosophy // The Ohio State University</p>
 
-<br><b>EXPERIENCE</b></br> 
-<br>Visual/UI/UX Designer // Alder Planetarium: Zooniverse / Aug 2015–present
+<h4>EXPERIENCE</h4> 
+<p>Visual/UI/UX Designer // Alder Planetarium: Zooniverse / Aug 2015–present
 <br>Visual Designer // The Field Museum: Science and Education / Apr 2014–Jun 2015
-<br>Art Director // FNewsmagazine / Jun 2013–Aug 2015</br>
+<br>Art Director // FNewsmagazine / Jun 2013–Aug 2015</p>
 
-<br><b>EXHIBITIONS</b></br>
-<br>The Design Show 2015 // The Chicago Art Department
-<br>Data as Art 2015 // Ford Engineering Design Center</br>
+<h4>EXHIBITIONS</h4>
+<p>The Design Show 2015 // The Chicago Art Department
+<br>Data as Art 2015 // Ford Engineering Design Center</p>
 
-<br><b>SPEAKING</b></br>
-<br>"Why Art Belongs in Science Museums" // NAEA Post-Op 2016 Symposium presentation</br>
-<p><i><p style="color:#95a5a6;">Homepage adapted from movement interactive installation at the Chicago Art Department</i></p><p></p>
+<h4>SPEAKING</h4>
+<p>"Why Art Belongs in Science Museums" // NAEA Post-Op 2016 Symposium presentation</p>
+<p><i><p style="color:#95a5a6;">Homepage adapted from movement interactive installation at the Chicago Art Department</i></p>
 
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
