--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,12 +33,30 @@
     </nav>
 
     <!-- Header -->
-     <header>
-     <div id="bg"></div>
-    </header>
-    
 
-
+<header>
+<div id="bg"></div>
+    <div class="col-lg-8 col-lg-offset-2">
+ <div class="header-content">
+     <div class="header-content-inner">
+        <h1 id="homeHeading"><span class="highlight">Jordan Whitney Martin</span></h1>
+            <hr>
+        <p><span class="highlight">Likes to make things, especially when it involves making things with other peosple.</span></p></div>
+<a class="page-scroll button" href="#portfolio">
+        <div class="top">
+            <div class="label">SEE MY WORK</div>
+                <div class="button-border button-border-left"></div>
+                <div class="button-border button-border-top"></div>
+                <div class="button-border button-border-right"></div>
+                <div class="button-border button-border-bottom"></div>
+            </div>
+            <div class="button-bottom"></div>
+        </div>
+    </a>
+</div>
+</div>
+</header>
+   
 
 <!--
         {% for page in site.pages %}
