--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,7 +36,7 @@
 
 <header>
 <div id="bg"></div>
-    <div class="col-lg-8 col-lg-offset-2">
+<div class="col-lg-8 col-lg-offset-2 col-centered">
  <div class="header-content">
      <div class="header-content-inner">
         <h1 id="homeHeading"><span class="highlight">Jordan Whitney Martin</span></h1>
