--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,12 +36,12 @@
 
 <header>
 <div id="bg"></div>
-<div class="col-lg-8 col-lg-offset-2">
+<div class="col-md-8 col-md-offset-2">
  <div class="header-content">
      <div class="header-content-inner">
         <h1 id="homeHeading"><span class="highlight">Jordan Whitney Martin</span></h1>
             <hr>
-        <p><span class="highlight">Likes to make things, especially when it involves making things with other peosple.</span></p></div>
+        <p><span class="highlight">Likes to make things, especially when it involves making things with other people.</span></p></div>
 <a class="page-scroll button" href="#portfolio">
         <div class="top">
             <div class="label">SEE MY WORK</div>
