--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,12 +36,12 @@
 
 <header>
 <div id="bg"></div>
-<div class="col-md-8 col-md-offset-2">
  <div class="header-content">
+ <div class="col-lg-12 col-lg-offset-4">
      <div class="header-content-inner">
         <h1 id="homeHeading"><span class="highlight">Jordan Whitney Martin</span></h1>
             <hr>
-        <p><span class="highlight">Likes to make things, especially when it involves making things with other people.</span></p></div>
+        <p><span class="highlight">Likes to make things, especially when it involves making things with other people.</span></p>
 <a class="page-scroll button" href="#portfolio">
         <div class="top">
             <div class="label">SEE MY WORK</div>
@@ -53,7 +53,8 @@
             <div class="button-bottom"></div>
         </div>
     </a>
-</div>
+        </div>
+    </div>
 </div>
 </header>
    
