--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,15 +33,14 @@
     </nav>
 
     <!-- Header -->
-
-<header>
 <div id="bg"></div>
- <div class="header-content">
- <div class="col-lg-12 col-lg-offset-4">
-     <div class="header-content-inner">
-        <h1 id="homeHeading"><span class="highlight">Jordan Whitney Martin</span></h1>
-            <hr>
-        <p><span class="highlight">Likes to make things, especially when it involves making things with other people.</span></p>
+ <header class="intro">
+        <div class="intro-body">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2">
+                        <h1 class="brand-heading"><span class="highlight">Jordan Whitney Martin</h1>
+                        <p class="intro-text"><span class="highlight">Likes to make things, especially when it involves making things with other people.</p></span>
 <a class="page-scroll button" href="#portfolio">
         <div class="top">
             <div class="label">SEE MY WORK</div>
@@ -53,8 +52,9 @@
             <div class="button-bottom"></div>
         </div>
     </a>
-        </div>
-    </div>
+</div>
+</div>
+</div>
 </div>
 </header>
    
