--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -280,7 +280,6 @@ fieldset[disabled] .btn-xl.active {
 }
 
  #bg {
-
         height: 100vh;
         width: 100vw;
         top: 0;
@@ -304,9 +303,11 @@ fieldset[disabled] .btn-xl.active {
     }
 }
 
+
 .intro {
     z-index: 100;
-    display: flex;
+    display: block;
+    position: relative;
     height: 100%;
     padding: 0px 0px;
     text-align: center;
@@ -315,6 +316,7 @@ fieldset[disabled] .btn-xl.active {
 
 .intro .intro-body {
     display:inline-block;
+
 }
 
 .intro .intro-body .brand-heading {
@@ -340,10 +342,9 @@ fieldset[disabled] .btn-xl.active {
         z-index: 100;
         position: absolute;
         height:100%;
-        display: block;
-        padding: 0px;
-        margin-right: 28%;
-        margin-left: 28%;
+        width: 100%;
+        margin-right: auto;
+        margin-left: auto;
 
     }
 
