--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
     </nav>
 
     <!-- Header -->
-<div id="bg"></div>
+<div id="bg">
  <header class="intro">
         <div class="intro-body">
             <div class="container">
@@ -56,7 +56,7 @@
 </div>
 </div>
 </div>
-</header>
+</header></div>
    
 
 <!--
