--- a/_includes/about_modal.html
+++ b/_includes/about_modal.html
@@ -14,7 +14,7 @@
                             <h2>About</h2>
                             <hr class="star-primary">
                             <h4>HELLO</h4>
-<p>Jordan is a Chicago based designer, artist, and creative with an interest in science and complex systems. She'll likely do something like explain things like the Laser Interferometer Gravitational-Wave Observatory on a cocktail napkin to you.</br>
+<p>Jordan is a Chicago based designer, artist, and creative with an interest in science and complex systems. If you catch her at a bar, she'll likely do something like explain the Laser Interferometer Gravitational-Wave Observatory on a cocktail napkin to you.</br>
 <br>Get in touch: jordanwhitneymartin@gmail.com</p>
 
 <h4>EDUCATION</h4>
