--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
 </nav>
 
 <!-- Header -->
-<div id="bg">
+<div id="bg"></div>
    <header class="intro">
     <div class="intro-body">
         <div class="container">
@@ -56,4 +56,4 @@
         </div>
     </div>
 </div>
-</header></div>
+</header>
