--- a/_includes/about_modal.html
+++ b/_includes/about_modal.html
@@ -23,7 +23,7 @@
 
                                 <h4>EXPERIENCE</h4> 
                                 <p>Visual/UI/UX Designer // Alder Planetarium: Zooniverse / Aug 2015–present
-                                    <br>Visual Designer // The Field Museum: Science and Education / Apr 2014–Jun 2015
+                                    <br>Visual Designer // The Field Museum: Science & Education / Apr 2014–Jun 2015
                                     <br>Art Director // FNewsmagazine / Jun 2013–Aug 2015</p>
 
                                     <h4>EXHIBITIONS</h4>
