--- a/_includes/about_modal.html
+++ b/_includes/about_modal.html
@@ -14,7 +14,7 @@
                         <h2>About</h2>
                         <hr class="star-primary">
                         <h4>HELLO</h4>
-                        <p>Jordan is a Chicago based designer, artist, and creative with an interest in science and complex systems. If you catch her at a bar, she'll likely do something like explain the Laser Interferometer Gravitational-Wave Observatory on a cocktail napkin to you.</br>
+                        <p>Jordan is a designer, artist, and creative
                             <br>Get in touch: jordanwhitneymartin@gmail.com</p>
 
                             <h4>EDUCATION</h4>
@@ -26,7 +26,7 @@
                                     <br>Visual Designer // The Field Museum: Science & Education / Apr 2014–Jun 2015
                                     <br>Art Director // FNewsmagazine / Jun 2013–Aug 2015</p>
 
-                                    <h4>EXHIBITIONS</h4>
+                                    <h4>EXHIBITION</h4>
                                     <p>The Design Show 2015 // The Chicago Art Department
                                         <br>Data as Art 2015 // Ford Engineering Design Center</p>
 
