--- a/_includes/about_modal.html
+++ b/_includes/about_modal.html
@@ -14,9 +14,10 @@
                         <h2>About</h2>
                         <hr class="star-primary">
                         <h4>HELLO</h4>
-                        <p>Jordan is a designer, artist, and creative who always wants to learn something new.
+                        <p>Jordan is a multi-disciplinary designer and artist with a focus on interface design.
+                        <br>She always wants to learn something new and a create positive impact.
                             <p>Get in touch: jordanwhitneymartin@gmail.com</p>
-                            <p><a href="http://wewantto.design">we want to ___</a>
+                            <p>And checkout: <a href="http://wewantto.design">we want to ___</a></p>
 
                             <h4>EDUCATION</h4>
                             <p>Visual Communication Design // The School of the Art Institute of Chicago
