--- a/_includes/js.html
+++ b/_includes/js.html
@@ -25,12 +25,7 @@
     <script src="{{ "/js/classie.js" | prepend: site.baseurl }}"></script>
     <script src="{{ "/js/cbpAnimatedHeader.js" | prepend: site.baseurl }}"></script>
 
-    <!-- Contact Form JavaScript -->
-    <script src="{{ "/js/jqBootstrapValidation.js" | prepend: site.baseurl }}"></script>
-    <script src="{{ "/js/contact_me.js" | prepend: site.baseurl }}"></script>
-
     <!-- Custom Theme JavaScript -->
     <script src="{{ "/js/agency.js" | prepend: site.baseurl }}"></script>
     <script src="{{ "/js/sketch.js" | prepend: site.baseurl }}"></script>
-    <script src="{{ "/js/p5.js" | prepend: site.baseurl }}"></script>
-    <script src="{{ "/js/p5.dom.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/js/p5.min.js" | prepend: site.baseurl }}"></script>
